--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="bckgimg">
-<div>
-    <a class="text" id="link" href="estrelas.html"> historia das estrelas</a>
+<div class="topbox">
+    <a class="text"  href="estrelas.html"> historia das estrelas</a>
+    <a class="text"  href="estrelas.html"> historia das estrelas</a>
+    <a class="text"  href="estrelas.html"> historia das estrelas</a>
     
+
 </div>
 <div class="bckgtxt">
     <h1 class="title"> Uma breve historia do universo </h1>
