--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body class="bckgimg">
 <div class="item_container_top">
     <a class="text" id="link" href="estrelas.html"> História das Estrelas</a>
-    
 </div>
-<div class="bckgtxt">
-    <h1 class="title"> Uma breve historia do universo </h1>
-    <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla ad laboriosam, facilis exercitationem dolorem officia vitae adipisci? Repellendus minus expedita, dolorum, maiores vero aperiam dolorem obcaecati pariatur laboriosam in architecto. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime perspiciatis enim reiciendis similique in deleniti voluptate facilis quo eligendi ipsa dignissimos corporis neque odio ratione, excepturi error soluta facere perferendis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus non explicabo deleniti cum laboriosam nobis ad accusantium atque. Possimus officia itaque a architecto aut porro nemo dolores odit alias autem. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque fugit hic voluptatibus labore, facere illum excepturi, quam nisi magnam temporibus saepe quis neque unde pariatur libero eius itaque totam. Consequuntur. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis reiciendis iusto dolorem velit cumque aut incidunt? Asperiores dolorem, nam quas neque ipsa perferendis nisi. Animi similique reprehenderit suscipit nam delectus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime odio accusamus dicta! Animi voluptate eligendi nostrum voluptatem in, tempore aliquam id veniam. Ad blanditiis eaque quibusdam numquam iusto excepturi? Delectus.</p>
+<div class="bckgtxt" id="text_background_1">
+    <a class="box" id="bingusbangus" href="bigbang.html"> penis gordo</a>
+    <a class="box" href="estrelas.html">  </a>
+    <a class="box" href="buraconego.html"> </a>
 </div>
 
-<div class="item_container_bottom">
+<div class="item_container_bottom" id="first_containner">
     <a class="text" id="link" href="referencias.html"> Referências</a>
     <a class="text" id="link" href="sobre.html"> Sobre</a>
 </div>
