--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="bckgimg">
-<div class="item_container_top">
-    <a class="text" id="link" href="estrelas.html"> História das Estrelas</a>
+<div class="item_container_top" id="Index">
+    <h1> Penis </h1>
 </div>
 <div class="bckgtxt" id="text_background_1">
-    <a class="box" id="bingusbangus" href="bigbang.html"> penis gordo</a>
-    <a class="box" href="estrelas.html">  </a>
-    <a class="box" href="buraconego.html"> </a>
+    <a class="box" id="bingusbangus" href="bigbang.html"> big bang </a>
+    <a class="box" href="estrelas.html"> estrelas </a>
+    <a class="box" href="buraconego.html"> buraco negro </a>
 </div>
 
 <div class="item_container_bottom" id="first_containner">
