--- a/index.html
+++ b/index.html
@@ -9,13 +9,34 @@
 </head>
 <body class="bckgimg">
 <div class="item_container_top" id="Index">
-    <h1> Penis </h1>
+    <h1> Penis cu buceta pinto </h1>
 </div>
+<div
 <div class="bckgtxt" id="text_background_1">
-    <a class="box" id="bingusbangus" href="bigbang.html"> big bang </a>
-    <a class="box" href="estrelas.html"> estrelas </a>
-    <a class="box" href="buraconego.html"> buraco negro </a>
+
+    <div class="box" id="bingusbangus"> 
+        <a href="bigbang.html">
+            <div class="box-content">
+                big bang
+            </div>
+        </a>
+    </div>
+    <div class="box" id="estrela">
+        <a href="estrelas.html">
+            <div class="box-content">
+                estrelas
+            </div>
+        </a>
+    </div>
+    <div class="box" id="buraconegro">
+        <a href="buraconego.html">
+            <div class="box-content">
+                buraco negro
+            </div>
+        </a>
+    </div>
 </div>
+<div
 
 <div class="item_container_bottom" id="first_containner">
     <a class="text" id="link" href="referencias.html"> Referências</a>
