--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body class="bckgimg">
 <div class="item_container_top" id="Index">
-    <h1> Penis cu buceta pinto </h1>
+    <h1> Uma Breve História do Universo  </h1>
 </div>
-<div
+
 <div class="bckgtxt" id="text_background_1">
 
     <div class="box" id="bingusbangus"> 
@@ -36,7 +36,7 @@
         </a>
     </div>
 </div>
-<div
+
 
 <div class="item_container_bottom" id="first_containner">
     <a class="text" id="link" href="referencias.html"> Referências</a>
