--- a/bigbang.html
+++ b/bigbang.html
@@ -4,14 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Astronomia</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Big Bang</title>
+    <link rel="stylesheet" href="style.css"
 </head>
 
+<body class="bckgimg2">
+<div class="item_container_top">
+    <a class="text" id="link" href="index.html"> Voltar</a>
+</div>
 
+<div class="bckgtxt ">
+        <h1 class="title"> Big Bang </h1> 
 
+        <p class="text"> 
+            O Big Bang é a teoria científica predominante sobre a origem e a evolução do universo. Segundo essa teoria, o universo teve início em uma explosão primordial, cerca de 13,8 bilhões de anos atrás. Desde então, o universo tem se expandido continuamente.
+        </p>
 
+        <p class="text">
+            De acordo com a teoria do Big Bang, o universo começou como um ponto infinitamente pequeno e quente, chamado de "singularidade". Essa singularidade contém toda a matéria e a energia que existem no universo hoje. Em um momento chamado "instante inicial", a singularidade explodiu, dando início ao universo em expansão que conhecemos hoje.
+        </p>
 
-<head>
-<body
+        <p class="text">
+            Nos primeiros instantes após o Big Bang, o universo era muito quente e denso, composto principalmente de partículas subatômicas. Conforme o universo esfriou e se expandiu, as partículas começaram a se juntar para formar átomos, que, por sua vez, se combinaram para formar as estrelas e as galáxias.
+        </p>
 
+        <p class="text">
+            Existem diversas evidências que sustentam a teoria do Big Bang, como a radiação cósmica de fundo em micro-ondas, a abundância de elementos químicos no universo e a expansão contínua do universo.
+        </p>
+
+        <p class="text">
+            A radiação cósmica de fundo em micro-ondas é uma luz remanescente emitida cerca de 380.000 anos após o Big Bang, quando o universo esfriou o suficiente para que os átomos se formassem. A sua distribuição espacial, intensidade e espectro correspondem às previsões da teoria.
+        </p>
+
+        <p class="text">
+            A abundância de elementos químicos no universo também fornece evidências da teoria do Big Bang. A teoria prevê que os elementos químicos mais leves, como hidrogênio e hélio, deveriam ser os mais abundantes no universo, e as observações mostram que essa é exatamente a distribuição que encontramos.
+        </p>
+
+        <p class="text" id="last-p-bb">
+            Além disso, as medições da velocidade e da distância de galáxias também fornecem evidências da expansão do universo.<br>
+        </p>
+        
+        <img class="img" id="radiacao-funda" src="imagens/20161014_00_bigbang.webp" >
+        <cite class="legenda"> Foto: Wikimedia Commons</cite>
+        <h6> Radiação cósmica de Fundo descoberta por Robert Wilson em 1965</h6>
+</div>
+
+<div class="item_container_bottom">
+    <a class="text" id="link" href="referencias.html"> Referências</a>
+    <a class="text" id="link" href="sobre.html"> Sobre</a>
+</div>
+</body>
+</html>
