--- a/referencias.html
+++ b/referencias.html
@@ -18,8 +18,8 @@
     <h1> Fontes:</h1>
 
     <p class="ref">Big Bang: https//brasilescola.uol.com.br/geografia/big-bang.htm</p>
-    <p class="ref">Estrelas: https://mundoeducacao.uol.com.br/fisica/ciclo-vida-das-estrelas.htm#:~:text=O%20tempo%20que%20uma%20estrela,um%20processo%20que%20consome%20energia.</p>
-    <p class="ref">Buraco Negro: https://mundoeducacao.uol.com.br/fisica/buracos-negros.htm#:~:text=Os%20buracos%20negros%20são%20o,maiores%20que%20a%20do%20Sol.</p>
+    <p class="ref">Estrelas: https://mundoeducacao.uol.com.br/fisica/ciclo-vida-das-estrelas.htm#:~:text=O%20tempo%20que%20uma%20estrela,um%20processo%2<br>0que%20consome%20energia.</p>
+    <p class="ref">Buraco Negro: https://mundoeducacao.uol.com.br/fisica/buracos-negros.htm#:~:text=Os%20buracos%20negros%20são%20o,maiores%20que%20a<br>%20do%20Sol.</p>
     
 </div>
 
