--- a/sobre.html
+++ b/sobre.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css"
 </head>
 
-<body class="bckgimg3">
+<body class="bckgimg">
 <div class="item_container_top">
     <a class="text" id="link" href="index.html"> Voltar</a>
 </div>
@@ -18,6 +18,13 @@
     <p class="text"> Trabalho feito por Bernardo C. Freitas e Felipe S., alunos da Escola Técnica Vasco Antônio Venchiarutti pelo curso de Desenvolvimento de Sistemas. Na disciplina de Programação Web <br> 
      Professores: Ronildo Ferreira e Cristiane Fernandes</p>
 
+     <img src="imagens/Imagem do WhatsApp de 2023-05-11 à(s) 23.23.33 (2).jpg" alt="image" height="400px" width="600px">
+     <cite class="legenda">Foto: Autoria Própia</cite>
+    <p class="text"> A esquerda Bernardo C. de Freitas e a direita Felipe S.</p>
+
+
+    </div>
+<div class="item_container_bottom">
 </div>
 </body>
 </html>
