--- a/bigbang.html
+++ b/bigbang.html
@@ -52,6 +52,7 @@
 <div class="item_container_bottom">
     <a class="text" id="link" href="referencias.html"> Referências</a>
     <a class="text" id="link" href="sobre.html"> Sobre</a>
+    <a class="text" id="link" href="index.html"> Voltar</a>
 </div>
 </body>
 </html>
