--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
     <div class="box" id="bingusbangus"> 
         <a href="bigbang.html">
             <div class="box-content">
-                big bang
+                Big Bang
             </div>
         </a>
     </div>
     <div class="box" id="estrela">
         <a href="estrelas.html">
             <div class="box-content">
-                estrelas
+                Estrelas
             </div>
         </a>
     </div>
     <div class="box" id="buraconegro">
         <a href="buraconego.html">
             <div class="box-content">
-                buraco negro
+                Buracos Negros
             </div>
         </a>
     </div>
