--- a/buraconego.html
+++ b/buraconego.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buraco Negro</title>
+    <title>Buracos Negros</title>
     <link rel="stylesheet" href="style.css"
 </head>
 
@@ -13,7 +13,7 @@
     <a class="text" id="link" href="index.html"> Voltar</a>
 </div>
 <div class="bckgtxt ">
-    <h1 class="title"> Buraco Negro</h1> 
+    <h1 class="title"> Buracos Negros</h1> 
 
     <p class="text">
         Os buracos negros são objetos celestes fascinantes e intrigantes, que exercem enorme atração sobre a imaginação popular e a comunidade científica. Eles são caracterizados por uma enorme concentração de massa em um volume extremamente pequeno, que gera um campo gravitacional tão forte que nada pode escapar dele, nem mesmo a luz.
@@ -40,6 +40,7 @@
 <div class="item_container_bottom">
     <a class="text" id="link" href="referencias.html"> Referências</a>
     <a class="text" id="link" href="sobre.html"> Sobre</a>
+    <a class="text" id="link" href="index.html"> Voltar</a>
 </div>
 </body>
 </html>
