--- a/bigbang.html
+++ b/bigbang.html
@@ -45,8 +45,10 @@
         </p>
         
         <img class="img" id="radiacao-funda" src="imagens/20161014_00_bigbang.webp" >
-        <cite class="legenda"> Foto: Wikimedia Commons</cite>
-        <h6> Radiação cósmica de Fundo descoberta por Robert Wilson em 1965</h6>
+
+        <h6 class="legenda "id="leg_txt_bb"> Foto: Wikimedia Commons</h6>
+        
+        <h5> Radiação cósmica de Fundo descoberta por Robert Wilson em 1965</h5>
 </div>
 
 <div class="item_container_bottom">
