--- a/buraconego.html
+++ b/buraconego.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buracos Negros</title>
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="bckgimg2">
@@ -32,8 +32,8 @@
     </p>
 
     <img class="img" id="negasso" src="imagens/aoggtbrqqo9i2qezt1nsdlpbk.webp">
-    <cite class="legenda"> Event Horizon Telescope Collaboration</cite>
-    <h6> Primeira imagem de um buraco negro já registrado. A imagem mostra o buraco negro supermassivo da galaxia M87 </h6>
+    <h6 class="legenda" id="leg_negasso"> Event Horizon Telescope Collaboration</h6>
+    <h5> Primeira imagem de um buraco negro já registrado. A imagem mostra o buraco negro supermassivo da galaxia M87 </h5>
     
 
 </div>
