--- a/estrelas.html
+++ b/estrelas.html
@@ -32,8 +32,8 @@
     </p>
 
     <img class="img" id="estrelas" src="imagens/20230314155024242957o.jpeg">
-    <cite class="legenda" id="legendabn"> Foto: Dilvugação/Nasa</cite>
-    <h6> Imagem tirada pelo telescópio James Webb. Estrela: WR 124</h6>
+    <h6 class="legenda" id="legendabn"> Foto: Dilvugação/Nasa</h6>
+    <h5> Imagem tirada pelo telescópio James Webb. Estrela: WR 124</h5>
 
 </div>
 <div class="item_container_bottom">
