--- a/sobre.html
+++ b/sobre.html
@@ -19,8 +19,8 @@
      Professores: Ronildo Ferreira e Cristiane Fernandes</p>
 
      <img src="imagens/Imagem do WhatsApp de 2023-05-11 à(s) 23.23.33 (2).jpg" alt="image" height="400px" width="600px">
-     <cite class="legenda">Foto: Autoria Própia</cite>
-    <p class="text"> A esquerda Bernardo C. de Freitas e a direita Felipe S.</p>
+     <h6 class="legenda" id="leg_sobre">Foto: Autoria Própia</h6>
+    <h5> A esquerda Bernardo C. de Freitas e a direita Felipe S.</h5>
 
 
     </div>
